--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
                 <div class="col-lg-8">
                     <div class="about-content-part wow fadeInUp delay-0-2s">
                         <h2>
-                            I’m Janak Desai Walker, a product designer.
+                            I’m Janak Desai, a Product Designer.
                         </h2>
                         <p>I am a San francisco-based product designer with a focus on web design, illustration, a
                             visual development. I have a diverse range of experience having worked across various fields
