--- a/works.html
+++ b/works.html
@@ -97,7 +97,7 @@
                                 <ul class="navigation onepage clearfix">
                                     <li><a class="nav-link-click" href="index.html">Home</a></li>
                                     <li><a class="nav-link-click" href="about.html">about</a></li>
-                                    <li><a class="nav-link-click" href="service.html">services</a></li>
+                                    <!-- <li><a class="nav-link-click" href="service.html">services</a></li> -->
                                     <li><a class="nav-link-click" href="works.html">works</a></li>
                                     <li><a class="nav-link-click" href="https://wa.me/918460394083" target="_blank">Contact</a></li>
                                 </ul>
