--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
                 <ul class="project-filter filter-btns-one justify-content-left pb-15 wow fadeInUp delay-0-2s">
                     <li data-filter="*" class="current">Show All</li>
                       <li data-filter=".website">Website</li>
-                    <li data-filter=".design">Design</li>
-                    <li data-filter=".branding">Branding</li>
+                    <li data-filter=".application">Application</li>
+                    <!-- <li data-filter=".branding">Branding</li>
                     <li data-filter=".marketing">Marketing</li>
-                    <li data-filter=".game">Game</li>
+                    <li data-filter=".game">Game</li> -->
                 </ul>
                 <div class="row project-masonry-active">
                     <!-- START SINGLE PORTFOLIO DESIGN AREA -->
