--- a/works.html
+++ b/works.html
@@ -140,7 +140,7 @@
                         <div class="project-item style-two wow fadeInUp delay-0-3s">
                             <div class="project-image">
                                 <img src="assets/images/projects/FCG.jpeg" alt="Project">
-                                <a href="single-project.html" class="details-btn"><i class="ri-arrow-right-up-line"></i></a>
+                                <a href="funded_capital_group.html" class="details-btn"><i class="ri-arrow-right-up-line"></i></a>
                             </div>
                             <div class="project-content">
                                 <span class="sub-title">Branding</span>
