--- a/index.html
+++ b/index.html
@@ -255,7 +255,11 @@
                             <h2>Works & Projects</h2>
                             <p>Check out some of my design projects, meticulously crafted with love and dedication,
                                 each one reflecting the passion and soul I poured into every detail.</p>
+                                <div class="menu-btns">
+                        <a href="works.html"  class="theme-btn">View All</a>
+                    </div>
                         </div>
+                        
                     </div>
                 </div>
                 <ul class="project-filter filter-btns-one justify-content-left pb-15 wow fadeInUp delay-0-2s">
