--- a/ekaki.html
+++ b/ekaki.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Tanvir Hossain">
     <!-- PAGE TITLE -->
     <title>Janak Desai</title>
-    <!-- FAV ICON -->
+     <!-- FAV ICON -->
     <link rel="apple-touch-icon" href="assets/images/favicon.svg">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.svg">
     <!-- ALL GOOGLE FONTS -->
@@ -64,7 +64,7 @@
     </div>
     <!-- END PRELOADER AREA -->
     <!-- START MENU DESIGN AREA -->
-   <header class="main-header">
+    <header class="main-header">
         <div class="header-upper">
             <div class="container">
                 <div class="header-inner d-flex align-items-center">
@@ -113,132 +113,84 @@
         </div>
     </header>
     <!-- / END MENU DESIGN AREA -->
-
-    <!-- START PORTFOLIO DESIGN AREA -->
-    <section id="portfolio" class="projects-area innerpage-single-area">
+    <!-- START SINGLE PAGE DETAILS DESIGN AREA -->
+    <div class="single-project-page-design">
         <div class="container">
-            <div class="container-inner">
-                <div class="row">
-                    <div class="col-xl-12 col-lg-12">
-                        <div class="section-title text-center wow fadeInUp delay-0-2s">
-                            <h2>Works & Projects</h2>
-                            <p>Check out some of my design projects, meticulously crafted with love and dedication,
-                                each one reflecting the passion and soul I poured into every detail.</p>
-                        </div>
-                    </div>
-                </div>
-                <ul class="project-filter filter-btns-one justify-content-left pb-15 wow fadeInUp delay-0-2s">
-                    <li data-filter="*" class="current">Show All</li>
-                    <li data-filter=".website">Website</li>
-                    <li data-filter=".application">Application</li>
-                </ul>
-                <div class="row project-masonry-active">
-                    <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <div class="col-lg-4 col-md-6 item branding game">
-                        <div class="project-item style-two wow fadeInUp delay-0-3s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/FCG.jpeg" alt="Project">
-                                <a href="funded_capital_group.html" class="details-btn"><i class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Branding</span>
-                                <h3>Mobile Application Design</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- / END SINGLE PORTFOLIO DESIGN AREA -->
-
-                    <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <div class="col-lg-4 col-md-6 item branding game">
-                        <div class="project-item style-two wow fadeInUp delay-0-3s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/ekaki.jpg" alt="Project">
-                                <a href="ekaki.html" class="details-btn"><i class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Branding</span>
-                                <h3>Mobile Application Design</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- / END SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- <div class="col-lg-4 col-md-6 item design marketing graphics">
-                        <div class="project-item style-two wow fadeInUp delay-0-4s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/work2.jpg" alt="Project">
-                                <a href="https://www.youtube.com/watch?v=qZEPs3vmYB4" class="details-btn popup-youtube"><i class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Design</span>
-                                <h3>Website Makeup Design</h3>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- / END SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- <div class="col-lg-4 col-md-6 item game graphics">
-                        <div class="project-item style-two wow fadeInUp delay-0-5s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/work3.jpg" alt="Project">
-                                <a href="assets/images/projects/work3.jpg" class="details-btn work-popup"><i class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Graphics</span>
-                                <h3>Brand Identity and Motion Design</h3>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- / END SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- <div class="col-lg-4 col-md-6 item design game">
-                        <div class="project-item style-two wow fadeInUp delay-0-6s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/work4.jpg" alt="Project">
-                                <a href="assets/images/projects/work4.jpg" class="details-btn work-popup"><i class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Game</span>
-                                <h3>Mobile Application Design</h3>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- / END SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- <div class="col-lg-4 col-md-6 item branding game">
-                        <div class="project-item style-two wow fadeInUp delay-0-7s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/work5.jpg" alt="Project">
-                                <a href="assets/images/projects/work5.jpg" class="details-btn work-popup"><i class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Branding</span>
-                                <h3>Application Design</h3>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- START PORTFOLIO DESIGN AREA -->
-                    <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <!-- <div class="col-lg-4 col-md-6 item design marketing graphics">
-                        <div class="project-item style-two wow fadeInUp delay-0-8s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/work6.jpg" alt="Project">
-                                <a href="https://www.youtube.com/watch?v=qZEPs3vmYB4" class="details-btn popup-youtube"><i class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Design</span>
-                                <h3>Website Development</h3>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- / END SINGLE PORTFOLIO DESIGN AREA -->
+            <div class="row">
+                <div class="col-lg-12 text-center pb-30">
+                    <p>Application</p>
+                    <h1>Ekaki-Solo Travelers Application</h1>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- // END PORTFOLIO DESIGN AREA -->
+        <div class="single-project-image">
+            <img src="assets/images/projects/ekaki.jpg" alt="image">
+        </div>
+        <div class="container pt-30">
+            <div class="row">
+                <div class="col-lg-4">
+                    <!-- START SINGLE LEFT DESIGN AREA -->
+                    <div class="single-project-page-left wow fadeInUp delay-0-2s">
+                        <div class="single-info">
+                            <p>Year</p>
+                            <h3>2025</h3>
+                        </div>
+                        <div class="single-info">
+                            <p>Client</p>
+                            <h3>Funded Capital Group</h3>
+                        </div>
+                        <div class="single-info">
+                            <p>Services</p>
+                            <h3>Web Design</h3>
+                        </div>
+                        <div class="single-info">
+                            <p>Project</p>
+                            <h3>UI/UX Design</h3>
+                        </div>
+                    </div>
+                    <!-- / END SINGLE LEFT DESIGN AREA -->
+                </div>
+                <!-- START SINGLE RIGHT DESIGN AREA -->
+                <div class="col-lg-8">
+                    <div class="single-project-page-right wow fadeInUp delay-0-4s">
+                        <h2>
+                            Description
+                        </h2>
+                        <p>Funded Capital Group is a private funding firm that offers instant-approval trading accounts—no evaluation process, no profit targets, and no time limits. Traders gain access to FCG’s capital and can begin trading immediately, aiming to meet specific performance thresholds to unlock payouts and scale funding.</p>
+                        
+                    </div>
+                </div>
+                <!-- / END SINGLE RIGHT DESIGN AREA -->
+            </div>
+            <!-- START SINGLE PAGE GALLERY DESIGN AREA -->
+            <div class="row pt-30">
+                <div class="col-lg-6">
+                    <div class="single-image wow fadeInUp delay-0-2s">
+                        <img src="assets/images/projects/fcg1.jpeg" alt="gallery">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="single-image wow fadeInUp delay-0-4s">
+                        <img src="assets/images/projects/fcg2.jpeg" alt="gallery">
+                    </div>
+                </div>
+                <!-- <div class="col-lg-6">
+                    <div class="single-image wow fadeInUp delay-0-6s">
+                        <img src="assets/images/projects/single-project3.jpg" alt="gallery">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="single-image wow fadeInUp delay-0-8s">
+                        <img src="assets/images/projects/single-project4.jpg" alt="gallery">
+                    </div>
+                </div> -->
+            </div>
+            <!--  / END SINGLE PAGE GALLERY DESIGN AREA -->
+        </div>
+    </div>
+    <!-- / END SINGLE PAGE DETAILS DESIGN AREA -->
     <!-- START CALL TO ACTION DESIGN AREA -->
-    <section  class="call-to-action-area">
+    <section class="call-to-action-area">
         <div class="container">
             <div class="row">
                 <!-- START ABOUT TEXT DESIGN AREA -->
