--- a/works.html
+++ b/works.html
@@ -134,30 +134,30 @@
                 </ul>
                 <div class="row project-masonry-active">
                     <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <div class="col-lg-4 col-md-6 item branding game">
+                    <div class="col-lg-4 col-md-6 item website game">
                         <div class="project-item style-two wow fadeInUp delay-0-3s">
                             <div class="project-image">
                                 <img src="assets/images/projects/FCG.jpeg" alt="Project">
                                 <a href="funded_capital_group.html" class="details-btn"><i class="ri-arrow-right-up-line"></i></a>
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Branding</span>
-                                <h3>Mobile Application Design</h3>
+                                <span class="sub-title">Website</span>
+                                <h3>Funded Capital Group</h3>
                             </div>
                         </div>
                     </div>
                     <!-- / END SINGLE PORTFOLIO DESIGN AREA -->
 
                     <!-- START SINGLE PORTFOLIO DESIGN AREA -->
-                    <div class="col-lg-4 col-md-6 item branding game">
+                    <div class="col-lg-4 col-md-6 item application game">
                         <div class="project-item style-two wow fadeInUp delay-0-3s">
                             <div class="project-image">
                                 <img src="assets/images/projects/ekaki.jpg" alt="Project">
                                 <a href="ekaki.html" class="details-btn"><i class="ri-arrow-right-up-line"></i></a>
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Branding</span>
-                                <h3>Mobile Application Design</h3>
+                                <span class="sub-title">Application</span>
+                                <h3>Ekaki-Solo Travelers Application</h3>
                             </div>
                         </div>
                     </div>
