--- a/about.html
+++ b/about.html
@@ -135,14 +135,19 @@
                         <h2>
                             I’m Janak Desai, a Product Designer.
                         </h2>
-                        <p>I am a San francisco-based product designer with a focus on web design, illustration, a
-                            visual development. I have a diverse range of experience having worked across various fields
-                            and industries.</p>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a
-                            Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
-                            Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
-                            word in classical literature, discovered the undoubtable source.</p>
+                        <p>I’m a passionate Sr. UI/UX Designer who turns ideas into meaningful digital experiences. For
+                            me, design goes beyond aesthetics — it’s about understanding people, solving real problems,
+                            and crafting products that feel effortless, intuitive, and enjoyable to use.</p>
+
+                        <p>With experience across a variety of web and mobile applications, I thrive throughout the full
+                            design journey: researching, wireframing, prototyping, shaping user flows, and designing
+                            clean, functional interfaces that speak the language of users. I enjoy collaborating with
+                            clients, developers, and stakeholders to ensure every design is not only visually appealing
+                            but truly purposeful and aligned with business goals.</p>
+
+                        <p>Curiosity fuels my creativity, and problem-solving drives my process. Whether it’s refining a
+                            micro-interaction or pushing a concept further, I love every step that leads to a thoughtful
+                            and delightful user experience.</p>
                         <div class="hero-btns">
                             <a href="https://wa.me/918460394083" target="_blank" class="theme-btn">Get In touch<i
                                     class="ri-mail-send-line"></i></a>
@@ -176,7 +181,7 @@
                                     </div>
                                 </div>
                                 <!-- / END SINGLE RESUME DESIGN AREA -->
-                                 <!-- START SINGLE RESUME DESIGN AREA -->
+                                <!-- START SINGLE RESUME DESIGN AREA -->
                                 <div class="resume-item wow fadeInUp delay-0-3s">
                                     <div class="icon">
                                         <i class="ri-suitcase-2-line"></i>
@@ -188,7 +193,7 @@
                                     </div>
                                 </div>
                                 <!-- / END SINGLE RESUME DESIGN AREA -->
-                                   <!-- START SINGLE RESUME DESIGN AREA -->
+                                <!-- START SINGLE RESUME DESIGN AREA -->
                                 <div class="resume-item wow fadeInUp delay-0-3s">
                                     <div class="icon">
                                         <i class="ri-suitcase-2-line"></i>
@@ -265,7 +270,8 @@
                                     <div class="content">
                                         <span class="years">2013 - 2015</span>
                                         <h4>B.Sc. in Multimedia & Animation</h4>
-                                        <span class="company">Frameboxx Animation & Visual Effect / Sikkim Manipal University
+                                        <span class="company">Frameboxx Animation & Visual Effect / Sikkim Manipal
+                                            University
                                         </span>
                                     </div>
                                 </div>
