--- a/funded_capital_group.html
+++ b/funded_capital_group.html
@@ -147,6 +147,9 @@
                             <p>Project</p>
                             <h3>UI/UX Design</h3>
                         </div>
+                        <div class="hero-btns">
+                            <a href="https://fundedcapitalgroup.com/" target="_blank" class="theme-btn">Visit Site<i class="ri-arrow-right-up-line"></i></a>
+                        </div>
                     </div>
                     <!-- / END SINGLE LEFT DESIGN AREA -->
                 </div>
