--- a/index.html
+++ b/index.html
@@ -102,14 +102,16 @@
                                     <li><a class="nav-link-click" href="about.html">about</a></li>
                                     <!-- <li><a class="nav-link-click" href="service.html">services</a></li> -->
                                     <li><a class="nav-link-click" href="works.html">works</a></li>
-                                    <li><a class="nav-link-click" href="https://wa.me/918460394083" target="_blank">Contact</a></li>
+                                    <li><a class="nav-link-click" href="https://wa.me/918460394083"
+                                            target="_blank">Contact</a></li>
                                 </ul>
                             </div>
                         </nav>
                         <!-- / END NAV DESIGN AREA -->
                     </div>
                     <div class="menu-btns">
-                        <a href="https://wa.me/918460394083" target="_blank" target="_blank" class="theme-btn">Hire Me<i class="ri-shake-hands-line"></i></a>
+                        <a href="https://wa.me/918460394083" target="_blank" target="_blank" class="theme-btn">Hire Me<i
+                                class="ri-shake-hands-line"></i></a>
                     </div>
                 </div>
             </div>
@@ -128,9 +130,12 @@
                         <p>I am a UI/UX Designer based in India.</p>
                         <div class="about-social text-center">
                             <ul>
-                                <li><a href="https://www.linkedin.com/in/janakdesai007/" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
-                                <li><a href="https://www.behance.net/janakdesai" target="_blank"><i class="ri-behance-fill"></i></a></li>
-                                <li><a href="https://dribbble.com/janakdesai" target="_blank"><i class="ri-dribbble-fill"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/janakdesai007/" target="_blank"><i
+                                            class="ri-linkedin-fill"></i></a></li>
+                                <li><a href="https://www.behance.net/janakdesai" target="_blank"><i
+                                            class="ri-behance-fill"></i></a></li>
+                                <li><a href="https://dribbble.com/janakdesai" target="_blank"><i
+                                            class="ri-dribbble-fill"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -149,7 +154,9 @@
                             </ul>
                         </div>
                         <div class="hero-btns">
-                            <a href="assets/images/Janak Desai (Sr. UIUX Designer).pdf" download="Janak_Desai_CV.pdf" class="theme-btn" target="_blank"download>Download CV <i class="ri-download-line"></i></a>
+                            <a href="assets/images/Janak Desai (Sr. UIUX Designer).pdf" download="Janak_Desai_CV.pdf"
+                                class="theme-btn" target="_blank" download>Download CV <i
+                                    class="ri-download-line"></i></a>
                         </div>
                     </div>
                     <div class="about-content-part-bottom wow fadeInUp delay-0-2s">
@@ -255,16 +262,16 @@
                             <h2>Works & Projects</h2>
                             <p>Check out some of my design projects, meticulously crafted with love and dedication,
                                 each one reflecting the passion and soul I poured into every detail.</p>
-                                <div class="menu-btns">
-                        <a href="works.html"  class="theme-btn">View All</a>
-                    </div>
+                            <div class="menu-btns">
+                                <a href="works.html" class="theme-btn">View All</a>
+                            </div>
                         </div>
-                        
+
                     </div>
                 </div>
                 <ul class="project-filter filter-btns-one justify-content-left pb-15 wow fadeInUp delay-0-2s">
                     <li data-filter="*" class="current">Show All</li>
-                      <li data-filter=".website">Website</li>
+                    <li data-filter=".website">Website</li>
                     <li data-filter=".application">Application</li>
                     <!-- <li data-filter=".branding">Branding</li>
                     <li data-filter=".marketing">Marketing</li>
@@ -285,34 +292,21 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-4 col-md-6 item branding game">
+                    <!-- END SINGLE PORTFOLIO DESIGN AREA -->
+                     <!-- START SINGLE PORTFOLIO DESIGN AREA -->
+                    <div class="col-lg-4 col-md-6 item application game">
                         <div class="project-item style-two wow fadeInUp delay-0-3s">
                             <div class="project-image">
-                                <img src="assets/images/projects/work8.webp" alt="Project">
-                                <a href="single-project.html" class="details-btn"><i
-                                        class="ri-arrow-right-up-line"></i></a>
+                                <img src="assets/images/projects/ekaki/ekaki.jpg" alt="Project">
+                                <a href="ekaki.html" class="details-btn"><i class="ri-arrow-right-up-line"></i></a>
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Branding</span>
-                                <h3>Mobile Application Design</h3>
+                                <span class="sub-title">Application</span>
+                                <h3>Ekaki: Solo Travel Buddy</h3>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-4 col-md-6 item branding game">
-                        <div class="project-item style-two wow fadeInUp delay-0-3s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/work9.webp" alt="Project">
-                                <a href="single-project.html" class="details-btn"><i
-                                        class="ri-arrow-right-up-line"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Branding</span>
-                                <h3>Mobile Application Design</h3>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- END SINGLE PORTFOLIO DESIGN AREA -->
                     <!-- START PORTFOLIO DESIGN AREA -->
                     <!-- START SINGLE PORTFOLIO DESIGN AREA -->
                     <!-- <div class="col-lg-4 col-md-6 item design marketing graphics">
@@ -405,7 +399,8 @@
                         <p>Reach out and let's make it happen ✨. I'm also available for full-time or Part-time
                             opportunities to push the boundaries of design and deliver exceptional work.</p>
                         <div class="hero-btns">
-                            <a href="https://wa.me/918460394083" target="_blank" class="theme-btn">Let's Talk <i class="ri-download-line"></i></a>
+                            <a href="https://wa.me/918460394083" target="_blank" class="theme-btn">Let's Talk <i
+                                    class="ri-download-line"></i></a>
                         </div>
                     </div>
                 </div>
