--- a/ekaki.html
+++ b/ekaki.html
@@ -187,42 +187,37 @@
             <div class="row pt-30">
                 <div class="col-lg-6">
                     <div class="single-image wow fadeInUp delay-0-2s">
-                        <img src="assets/images/projects/ekaki/ekaki-4.jpg" alt="gallery">
+                        <img src="assets/images/projects/ekaki/ekaki-1.png" alt="gallery">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="single-image wow fadeInUp delay-0-4s">
-                        <img src="assets/images/projects/ekaki/ekaki-1.jpg" alt="gallery">
+                        <img src="assets/images/projects/ekaki/ekaki-2.png" alt="gallery">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="single-image wow fadeInUp delay-0-6s">
-                        <img src="assets/images/projects/ekaki/ekaki-5.jpg" alt="gallery">
+                        <img src="assets/images/projects/ekaki/ekaki-3.png" alt="gallery">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="single-image wow fadeInUp delay-0-8s">
-                        <img src="assets/images/projects/ekaki/ekaki-2.jpg" alt="gallery">
+                        <img src="assets/images/projects/ekaki/ekaki-4.png" alt="gallery">
                     </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="single-image wow fadeInUp delay-0-8s">
-                        <img src="assets/images/projects/ekaki/ekaki-3.jpg" alt="gallery">
+                        <img src="assets/images/projects/ekaki/ekaki-5.png" alt="gallery">
                     </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="single-image wow fadeInUp delay-0-8s">
-                        <img src="assets/images/projects/ekaki/ekaki-6.jpg" alt="gallery">
+                        <img src="assets/images/projects/ekaki/ekaki-6.png" alt="gallery">
                     </div>
                 </div>
 
-                <div class="col-lg-6">
-                    <div class="single-image wow fadeInUp delay-0-8s">
-                        <img src="assets/images/projects/ekaki/ekaki-7.jpg" alt="gallery">
-                    </div>
-                </div>
             </div>
             <!--  / END SINGLE PAGE GALLERY DESIGN AREA -->
         </div>
